# quickcodes

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  FEATURES.md  LICENSE.md  NOTICE.md  PYTHON_USAGE.md  README.md  README_ReadDecodePlan.md  ROADMAP.md  RULESETS.md  RULESETS_GUIDE.md  SECURITY.md  TESTING.md  clippy.toml  crates.js  help.html  pyproject.toml  rustfmt.toml  search-index.js  settings.html  src-files.js
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml
Prompts/: Diagrama.txt  NameAndBranding.txt  Roadmap.txt  Royalties.txt  SitesGeradores.txt  Start.txt  StartToCode.txt  TecConcorrence.txt
cpp/: CMakeLists.txt
cpp/include/quickcodes/: quickcodes.h
cpp/test/: test.cpp
docs/formats/: README.md
docs/formats/1d/: codabar.md  code128.md  code39.md  ean13.md  itf14.md  upca.md
docs/formats/2d/: aztec.md  datamatrix.md  pdf417.md  qrcode.md
dotnet/: dotnet.sln
dotnet/QuickCodes/: Class1.cs  QuickCodes.cs  QuickCodes.csproj
dotnet/QuickCodes.Tests/: BarcodeGeneratorTests.cs  QuickCodes.Tests.csproj  UnitTest1.cs
examples/: README.md  basic_usage.rs  generate_test_sheet.rs  legacy_usage.rs  phase2_complete.rs  phase2_usage.rs
go/quickcodes/: build.sh  go.mod  quickcodes.go  quickcodes.h  quickcodes_test.go
python/examples/: basic_usage.py
python/quickcodes/: __init__.py
python/tests/: test_quickcodes.py
quickcodes/: all.html  fn.generate.html  fn.generate_to_file.html  fn.read_all_from_file.html  fn.read_from_bytes.html  fn.read_from_file.html  index.html  sidebar-items.js
quickcodes/exporters/: index.html  sidebar-items.js
quickcodes/exporters/pdf/: fn.export_pdf.html  index.html  sidebar-items.js
quickcodes/exporters/png/: fn.export_png.html  index.html  sidebar-items.js
quickcodes/exporters/svg/: fn.export_svg.html  index.html  sidebar-items.js
quickcodes/generators/: index.html  sidebar-items.js
quickcodes/generators/aztec/: fn.generate_aztec.html  fn.generate_aztec_with_config.html  index.html  sidebar-items.js  struct.AztecConfig.html
quickcodes/generators/codabar/: fn.generate_codabar.html  index.html  sidebar-items.js
quickcodes/generators/code128/: fn.generate_code128.html  fn.generate_code128_with_config.html  index.html  sidebar-items.js
quickcodes/generators/code39/: fn.generate_code39.html  index.html  sidebar-items.js
quickcodes/generators/datamatrix/: fn.generate_datamatrix.html  fn.generate_datamatrix_with_config.html  index.html  sidebar-items.js
quickcodes/generators/ean13/: fn.generate_ean13.html  fn.generate_ean13_with_config.html  index.html  sidebar-items.js
quickcodes/generators/itf14/: fn.generate_itf14.html  index.html  sidebar-items.js
quickcodes/generators/pdf417/: fn.generate_pdf417.html  fn.generate_pdf417_with_config.html  index.html  sidebar-items.js  struct.PDF417Config.html
quickcodes/generators/qr/: fn.generate_qr.html  fn.generate_qr_with_config.html  index.html  sidebar-items.js
quickcodes/generators/upc/: fn.generate_upc_a.html  fn.generate_upc_a_with_config.html  index.html  sidebar-items.js
quickcodes/readers/: fn.read_all_from_bytes.html  fn.read_all_from_file.html  fn.read_from_bytes.html  fn.read_from_file.html  fn.read_from_image.html  index.html  sidebar-items.js
quickcodes/types/: enum.BarcodeModules.html  enum.BarcodeType.html  enum.BarcodeTypeParseError.html  enum.ExportFormat.html  enum.QRErrorCorrection.html  enum.QuickCodesError.html  index.html  sidebar-items.js  struct.Barcode.html  struct.BarcodeConfig.html  struct.QRConfig.html  struct.ReadResult.html  type.Result.html
search.desc/quickcodes/: quickcodes-desc-0-.js
src/: c_api.rs  lib.rs  python.rs
src/exporters/: mod.rs  pdf.rs  png.rs  svg.rs
src/generators/: aztec.rs  codabar.rs  code128.rs  code39.rs  datamatrix.rs  ean13.rs  itf14.rs  mod.rs  pdf417.rs  qr.rs  upc.rs
src/quickcodes/: c_api.rs.html  lib.rs.html
src/quickcodes/exporters/: mod.rs.html  pdf.rs.html  png.rs.html  svg.rs.html
src/quickcodes/generators/: aztec.rs.html  codabar.rs.html  code128.rs.html  code39.rs.html  datamatrix.rs.html  ean13.rs.html  itf14.rs.html  mod.rs.html  pdf417.rs.html  qr.rs.html  upc.rs.html
src/quickcodes/readers/: mod.rs.html
src/quickcodes/types/: mod.rs.html
src/readers/: decoder.rs  detector.rs  image_processing.rs  linear_reader.rs  mod.rs  qr_reader.rs
src/types/: mod.rs
tests/: integration_tests.rs
trait.impl/core/clone/: trait.Clone.js
trait.impl/core/cmp/: trait.Eq.js  trait.PartialEq.js
trait.impl/core/convert/: trait.From.js
trait.impl/core/default/: trait.Default.js
trait.impl/core/error/: trait.Error.js
trait.impl/core/fmt/: trait.Debug.js  trait.Display.js
trait.impl/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js  trait.UnsafeUnpin.js
trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
trait.impl/core/str/traits/: trait.FromStr.js
trait.impl/serde/de/: trait.Deserialize.js
trait.impl/serde/ser/: trait.Serialize.js
type.impl/core/result/: enum.Result.js
