[package]
name = "quickcodes"
version = "0.1.0"
edition = "2021"
authors = ["Márcio Reck <marcio@fazmercado.com>"]
description = "Universal Barcode & QR Toolkit - Generate and read 1D and 2D codes with high performance"
license = "MIT"
repository = "https://github.com/marcioreck/quickcodes"
homepage = "https://github.com/marcioreck/quickcodes"
documentation = "https://docs.rs/quickcodes"
keywords = ["barcode", "qrcode", "ean", "code128", "datamatrix"]
categories = ["encoding", "multimedia::images"]
readme = "README.md"

[lib]
name = "quickcodes"
crate-type = ["cdylib", "rlib"]

# CLI will be added in Phase 1
# [[bin]]
# name = "quickcodes-cli"
# path = "src/bin/cli.rs"

[dependencies]
# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Image processing and generation
image = { version = "0.25", optional = true }
resvg = { version = "0.45", optional = true }
usvg = { version = "0.44", optional = true }

# QR Code generation
qrcode = "0.14"

# DataMatrix generation (implemented internally for now)
# datamatrix = "0.3"  # Will add proper library support later

# PDF417 generation (we'll implement basic version first)
# pdf417 = "0.1"  # Will add if available, otherwise custom implementation

# Aztec Code (we'll implement basic version first)
# aztec = "0.1"  # Will add if available, otherwise custom implementation

# SVG generation
svg = "0.18"

# PDF generation
printpdf = { version = "0.7", optional = true }

# Image reading and processing (for barcode detection)
imageproc = { version = "0.25", optional = true }
rqrr = { version = "0.7", optional = true }  # QR code reader

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI (for future CLI tool)
clap = { version = "4.5", features = ["derive"], optional = true }

# Python bindings (optional)
pyo3 = { version = "0.24", features = ["extension-module"], optional = true }

[features]
default = ["png", "svg"]
png = ["dep:image"]
svg = ["dep:resvg", "dep:usvg"]
pdf = ["dep:printpdf"]
readers = ["dep:image", "dep:imageproc", "dep:rqrr"]
cli = ["dep:clap"]
python = ["dep:pyo3"]

[dev-dependencies]
criterion = "0.5"
tempfile = "3.8"

# Benchmarks will be added later
# [[bench]]
# name = "generation_benchmark"
# harness = false
